# Auto-research-red-teaming

./: .env.example  .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SETUP_GUIDE.md  pyproject.toml
.github/workflows/: ci.yml
autoresearcher/: .gitignore  AGENTS.md  CLAUDE.md
autoresearcher/scripts/: add_researcher.sh  add_scenario.sh  add_victim.sh  aggregate_heldout.py  build_base_image.sh  build_codex_image.sh  build_dtagent_backends.sh  build_scenario_image.sh  check_dtagent_seeds.py  doctor.sh  dry_run.sh  freeze_concepts.py  instantiate_concepts.py  launch_run.sh  loop_codex.sh  loop_monitor_codex.sh  moonbridge.sh  render_summary.py  retry_proxy.py  run_heldout_eval.sh  synthesize_instances.py
docs/: ARCHITECTURE.md  BUILTIN_SCENARIOS.md  BYO_SCENARIO.md  DOCKER.md  DRY_RUN.md  MODELS.md  PERMISSIONS.md  PLUGINS.md  QUICKSTART.md  SCENARIO_BUILD_WALKTHROUGH.md
docs/shared-references/: falsifier-protocol.md  instantiate-protocol.md  subagent-dispatch.md  vcg-promotion.md
templates/: GOAL_BRIEF_TEMPLATE.md
templates/claude-settings/: project-settings.local.json  user-settings.json
templates/model-config/: README.md  minimal.env
templates/moonbridge/: config.example.yml  config_openrouter.example.yml  config_responses.example.yml  config_responses_deepseek.yml
templates/scenario-import-recipes/: convert_git_clone.py.j2  convert_hf_dataset.py.j2  convert_local_files.py.j2  convert_pip_package.py.j2
templates/scenario-minimal/: README.md  contract.yaml  judge.py.template  scenario.py.template  scenario.yaml.template
templates/scenario-plugin-template/: contract.yaml.j2  judge.py.stub  scenario.py  scenario.yaml
templates/victim-minimal/: README.md  adapter.py.template  victim.yaml.template
tests/: test_smoke.py
(+5381 files in other folders)
